# telegram-claude-relay

./: .env.bot1.example  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  claude-code-settings.json  pyproject.toml  requirements.txt  run-all-bots.sh  run-bot1.sh  run-bot2.sh  run-bot3.sh  run.sh  setup.sh
.claude/commands/: gitcommit.md  lint.md
.github/workflows/: lint-and-format.yml
hooks/: hook_utils.py  notification_hook.py  post_tool_use_hook.py  pre_tool_use_hook.py  stop_hook.py  user_prompt_submit_hook.py
scripts/: analyze_tool_schemas.py  manage_hooks.py
src/: __init__.py  exceptions.py  main.py
src/bot/: command_discovery.py  core.py
src/bot/handlers/: command.py  message.py  webhook.py
src/bot/middleware/: __init__.py  auth.py  rate_limit.py  security.py
src/bot/utils/: __init__.py  formatting.py  message_sender.py
src/claude/: __init__.py  conversation_monitor.py  facade.py  parser.py  permission_monitor.py  responses.py  tmux_integration.py  unix_socket_server.py
src/config/: __init__.py  loader.py  settings.py
src/security/: __init__.py  auth.py  rate_limiter.py
src/tmux/: __init__.py  client.py  exceptions.py
src/utils/: constants.py
